BUG (bgs): fix winrate graph sometimes going out of screen in BG tab

--- a/core/src/css/component/battlegrounds/desktop/battlegrounds-category-details.component.scss
+++ b/core/src/css/component/battlegrounds/desktop/battlegrounds-category-details.component.scss
@@ -2,6 +2,7 @@
 	height: 100%;
 	display: flex;
 	flex-grow: 1;
+	min-height: 0;
 }
 
 .battlegrounds-category-details {
